# tui-center

./: .gitignore  Cargo.toml  README.md  install.sh  prerequisites.sh  uninstall.sh
.github/workflows/: release.yml
src/: app.rs  cheat.rs  config.rs  handlers.rs  main.rs  onboarding.rs  theme.rs  types.rs
src/ui/: main_ui.rs  mod.rs  onboarding_ui.rs
tui-center/: Cargo.toml  prerequisites.sh
tui-center/src/: main.rs
